# cnr_ipc_utilities

./: CMakeLists.txt  LICENSE  README.md  cnr_ipc_utilitiesConfig.cmake.in  cnr_ipc_utilitiesConfigVersion.cmake.in  package.xml
.github/workflows/: build_cmake.yml
examples/: my_server_client.h  server_client_example.cpp
include/cnr_ipc_utilities/: asio_utilities.h
src/cnr_ipc_utilities/: asio_utilities.cpp
test/: test_ipc.cpp
